err/pyprof2xls.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/modargs'...
Compiling './lib/python3.5/site-packages/modargs/args.py'...
***   File "./lib/python3.5/site-packages/modargs/args.py", line 291
    print "//////////////////////////////////////////////////"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyprof2xls'...
Compiling './lib/python3.5/site-packages/pyprof2xls/commands.py'...
***   File "./lib/python3.5/site-packages/pyprof2xls/commands.py", line 12
    print "\nYou need to specify prof files using the --prof option. Here is the help:\n"
                                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyprof2xls/generate.py'...
***   File "./lib/python3.5/site-packages/pyprof2xls/generate.py", line 81
    print "ERROR in line %06d: %s" % (i, line)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyprof2xls-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/python_modargs-1.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xlwt'...
Listing './lib/python3.5/site-packages/xlwt-1.3.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
